// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends a style with a customStyle 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "normal",
      },
      Object {
        "textAlign": undefined,
      },
      Object {
        "fontSize": 18,
        "fontWeight": "normal",
        "letterSpacing": -0.75,
        "lineHeight": 32,
      },
    ]
  }
>
  Hello World
</Text>
`;

exports[`extends a style with a customStyle from another type 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "normal",
      },
      Object {
        "textAlign": undefined,
      },
      undefined,
    ]
  }
>
  Hello World
</Text>
`;

exports[`renders correctly with a text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "normal",
      },
      Object {
        "textAlign": undefined,
      },
      undefined,
    ]
  }
>
  Hello World
</Text>
`;

exports[`renders null without a text 1`] = `null`;

exports[`renders text-align: center 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "normal",
      },
      Object {
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  Hello World
</Text>
`;

exports[`renders text-align: left 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "normal",
      },
      Object {
        "textAlign": "left",
      },
      undefined,
    ]
  }
>
  Hello World
</Text>
`;

exports[`renders text-align: right 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "normal",
      },
      Object {
        "textAlign": "right",
      },
      undefined,
    ]
  }
>
  Hello World
</Text>
`;
